# grit

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
src/: main.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: auth.rs  init.rs  misc.rs  mod.rs  play.rs  staging.rs  utils.rs  vcs.rs
src/playback/: events.rs  lyrics.rs  mod.rs  mpv.rs  queue.rs  spotify.rs
src/provider/: mod.rs  spotify.rs  traits.rs  types.rs  youtube.rs
src/state/: config.rs  credentials.rs  journal.rs  mod.rs  snapshot.rs  staging.rs
src/tui/: app.rs  ui.rs
src/utils/: crypto.rs
